# inflation-austria

./: .gitignore  README.md  analysis.py  config.yaml  data_fetcher.py  html_report_generator.py  main.py  pyproject.toml  report_generator.py  requirements.txt  visualization.py
.github/workflows/: ci.yml
backend/: app.py
frontend/: streamlit_app.py
inflation_report/: __init__.py  analysis.py  config.py  constants.py  data.py  forecasting.py  pipeline.py  style.py  visualization.py
inflation_report/reporting/: __init__.py  html.py  text.py
tests/: test_backend.py
