[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inflation-report-austria"
version = "2.0.0"
authors = [
  { name="Julian Streitberger", email="author@example.com" },
]
description = "A professional tool for analyzing and visualizing inflation data for Austria in comparison with other European countries."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.20",
    "eurostat>=1.0",
    "PyYAML>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.6",
    "requests>=2.32",
    "pandas-datareader>=0.10",
    "streamlit>=1.34",
    "plotly>=5.20",
    "pycountry>=23.12",
    "statsmodels>=0.14",
    "scikit-learn>=1.0",
    "matplotlib>=3.8",
    "python-plot-template @ git+https://github.com/jstreitberger03/python-plot-template.git",
]

[tool.setuptools.packages.find]
include = ["inflation_report"]
exclude = ["output", "output.*"]

[project.urls]
"Homepage" = "https://github.com/jstreitberger03/inflation-report-austria"
"Bug Tracker" = "https://github.com/jstreitberger03/inflation-report-austria/issues"
